src/styles/App.css
.App-header {
  background-color: #282c34;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

html, body, #root, .App{
  height: 100%;
}

.wrapper {
  background: #282c34;
  margin: 0;
  padding: 0;
  height: 100vh;
  overflow: hidden; /* Hide scrollbars */
  position: relative;
}

.wrapper > div {
  margin: 10px;
  padding: 20px;
  font-size: 30px;
}


.player_list,
.play_field,
.settings_menu,
.progress_bar {
  box-sizing: border-box;
  border-radius: 10px;
}

.player_list {
  position: absolute;
  top: 10px;
  left: 10px;
  height: calc(80vh - 20px);
  width: calc(40vw - 20px - 5px); /* Adjusted width with margin */
  background-color: #3498db;
  margin-right: 5px; /* Adjusted margin */
}

.play_field {
  position: absolute;
  top: 10px;
  left: calc(40vw + 15px); /* Adjusted left position */
  height: calc(80vh - 20px);
  width: calc(60vw - 30px - 5px); /* Adjusted width with margin */
  background-color: #2ecc71;
  margin-right: 5px; /* Adjusted margin */
}

.settings_menu {
  position: absolute;
  top: calc(80vh + 20px);
  left: 10px;
  min-height: calc(20vh - 20px);
  width: calc(10vw - 20px - 5px); /* Adjusted width with margin */
  background-color: #e74c3c;
  margin-right: 5px; /* Adjusted margin */
}

.progress_bar {
  position: absolute;
  top: calc(80vh + 20px);
  left: calc(10vw + 15px); /* Adjusted left position */
  min-height: calc(20vh - 20px);
  width: calc(90vw - 30px - 5px); /* Adjusted width with margin */
  background-color: #f39c12;
}

